--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style type="text/css">
     html,body{height: 100%;}
     .bg-utama{
-    background-image: url(img/bg.jpeg);
+    background-image: url(bg.jpeg);
     background-size: cover;
     background-position: center;
     text-align: center;
