--- a/index2.html
+++ b/index2.html
@@ -7,27 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
 
-  <style type="text/css">
-    html,body{height: 100%;}
-    .bg-utama{
-    background-image: url(img/bg.jpeg);
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    height: 100%;
-    }
-    .bg-color{
-        background-color: rgba(0, 0, 0, 0.75);
-        height: 100%;
-    }
 
- </style>
-
-
-  <body style="background-image: url(img/love-heart.gif); height: fit-content;">
+  <body style="background-image: url(love-heart.gif); height: fit-content;">
     <div class="container" style="padding-top: 25%; padding-left: 10%;">
         <video controls="autoplay" loop>
-            <source src="img/Untitled video.mp4" type="video/mp4" />
+            <source src="Untitled video.mp4" type="video/mp4" />
             Browsermu tidak mendukung tag ini, upgrade donk!
           </video>
     </div>
