--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
   </head>
 
 
-  <body style="background-image: url(love-heart.gif); height: fit-content;">
-    <div class="container" style="padding-top: 25%; padding-left: 10%;">
+  <body style="background-image: url(love-heart.gif); height: 100%;">
+    <div class="container" style="padding-top: 30%; padding-left: 10%;">
         <video controls="autoplay" loop>
             <source src="Untitled video.mp4" type="video/mp4" />
             Browsermu tidak mendukung tag ini, upgrade donk!
